# K8S-Anomaly-Detection-and-Remediation

./: .gitignore  DEVOPS_RULES.md  LICENSE  PROJECT_CLEANUP_SUMMARY.md  README.md  USER_RULES.yaml  cleanup_plan.py  d1.py  dataset-generator.py  dummy1.py  k8s_agentic_rag_prompt.md  package-lock.json  package.json  project_inventory.py  prompt.md  prompt1.md  rag_prompt.md  requirements.txt  run_visualization_dashboard.py  structured-prompt.md  tailwind.config.js  workspace.md
.kiro/specs/project-cleanup-enhancement/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
backend/: Dockerfile  README.md  nvidia_api_requirements.txt  pyproject.toml
backend/docs/: configuration.md  development.md
backend/scripts/: setup_config.py  test_services.py
backend/src/agents/: anomaly_detection_agent.py  dataset_generator_agent.py  k8s_metrics_collector.py  k8s_multi_agent_system.py  nvidia_llm.py  utils.py
backend/src/api/: api_server.py  dashboard_api.py  mcp_server.py
backend/src/config/: loader.py  settings.py  test_config.py
backend/src/services/: k8s_remediation.py  k8s_visualization_dashboard.py  load_knowledge_base.py
backend/src/utils/: k8s_client_utils.py  rag_utils.py
cursor/cursor/: project_rules.md
data/: pod_insights.json
frontend/: .gitignore  README.md  package.json  tailwind.config.ts
frontend/src/hooks/: useClusterData.ts
frontend/src/pages/: Index.tsx
infra/: README.md
infra/scripts/: run_agentic_rag_cli.ps1  run_agentic_rag_cli.sh  setup_and_run.ps1  setup_minikube.sh
k8s/: AGENTIC_RAG_CLI.md  LLAMA_API_INTEGRATION.md  MINIKUBE_SETUP.md  NVIDIA_API_INTEGRATION.md  RAG_FIX_SUMMARY.md  check_versions.py  fix_and_run.ps1  fix_compatibility.ps1  fix_keras_compatibility.ps1  install_from_source.ps1  install_step_by_step.ps1  recreate_venv_and_run.ps1  requirements.txt  run_agentic_rag_cli.ps1  run_agentic_rag_cli.sh  run_dashboard_api.ps1  setup_and_test_nvidia_api.ps1  setup_minikube.ps1  start-dashboard.ps1  test_nvidia_key.py
k8s/backend/: agentic_rag_cli.py  chatbot_api.py  k8s_knowledge_fetcher.py  rag_utils.py  remediated.json  server.js
k8s/dashboard/: Dockerfile  README.md  k8s-dashboard-deployment.yaml  package.json
k8s/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
k8s/frontend/src/: App.tsx  index.css
k8s/k8s-dashboard-backend/api/: llama_routes.py
k8s/k8s-dashboard-backend/tests/: test_llama_integration.py
k8s/k8s-dashboard-frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
k8s/k8s-dashboard-frontend/src/: middleware.ts
k8s/kubescape/: .gitignore  README.md  index.html  package-lock.json  package.json
k8s/kubescape/backend/: README_RAG_FIX.md  agentic_rag_cli.py  app.py  k8s_client_utils.py  k8s_knowledge_fetcher.py  mcp.json  minikube_access_test.py  rag_utils.py  requirements.txt  test_rag_fix.py
k8s/kubescape/src/: index.css
k8s/kubescape/supabase/: config.toml
k8s/src/: agentic_rag_cli.py  api_server.py  dashboard_api.py  fetch_metrics.py  k8s_visualization_dashboard.py  load_knowledge_base.py  mcp_server.py
k8s/src/agents/: k8s_multi_agent_system.py  nvidia_llm.py  remediation_agent.py  run_monitoring.py  state_graph.py
k8s/tests/: test_llama_api.py  test_nvidia_api.py
models/: anomaly_prediction.py
public/data/: dataSynthetic.csv
shared/: README.md
shared/docs/: NVIDIA_API_INTEGRATION.md  environment-variables.md  troubleshooting.md
src/: anomaly_threshold.pkl  k8s_visualization_dashboard.py  lstm_anomaly_model.h5  mcp_server.py  rag_utils.py  scaler.pkl
src/agents/: pod_metrics.csv
src/app/: globals.css  layout.tsx  page.tsx
src/app/dashboard/: layout.tsx  page.tsx
src/components/: Header.tsx  Sidebar.tsx
src/components/dashboard/: AnomalyDetection.tsx  AnomalyVisualization.tsx  ClusterOverview.tsx  MetricsGrid.tsx  (+2 more)
src/lib/: anomalyDataService.ts  mockData.ts
(+93 files in other folders)
